--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,10 +13,10 @@
 		"@types/react-dom": "^16.9.0",
 		"@types/react-native": "^0.60.26",
 		"react": "^16.12.0",
-		"react-art": "^16.8.2",
+		"react-art": "^16.12.0",
 		"react-dom": "^16.12.0",
-		"react-native": "^0.55.4",
-		"react-native-web": "^0.10.0",
+		"react-native": "^0.61.5",
+		"react-native-web": "^0.12.0-rc.1",
 		"react-scripts": "3.3.0",
 		"typescript": "~3.7.2"
 	},
