--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "tsc"
+		"build": "rimraf dist && tsc"
 	},
 	"author": "",
 	"license": "ISC",
@@ -13,6 +13,7 @@
 		"@types/react-native": "^0.60.26",
 		"react": "^16.12.0",
 		"react-native": "^0.61.5",
+		"rimraf": "^3.0.0",
 		"typescript": "^3.7.4"
 	}
 }
