--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,7 +6,6 @@
 		"android": "react-native run-android",
 		"ios": "react-native run-ios",
 		"start": "react-native start",
-
 		"test": "jest",
 		"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
 	},
@@ -15,8 +14,6 @@
 		"react-native": "0.61.5"
 	},
 	"devDependencies": {
-		"@wow/common": "1.0.0",
-
 		"@babel/core": "^7.6.2",
 		"@babel/runtime": "^7.6.2",
 		"@react-native-community/eslint-config": "^0.0.5",
@@ -25,18 +22,33 @@
 		"@types/react-test-renderer": "16.9.1",
 		"@typescript-eslint/eslint-plugin": "^2.12.0",
 		"@typescript-eslint/parser": "^2.12.0",
+		"@wow/common": "1.0.0",
 		"babel-jest": "^24.9.0",
 		"eslint": "^6.5.1",
 		"jest": "^24.9.0",
 		"metro-react-native-babel-preset": "^0.56.0",
+		"react-native-monorepo-helper": "^0.2.7",
 		"react-test-renderer": "16.9.0",
 		"typescript": "^3.7.3"
 	},
 	"jest": {
 		"preset": "react-native",
-		"moduleFileExtensions": [ "ts", "tsx", "js", "jsx", "json", "node" ]
+		"moduleFileExtensions": [
+			"ts",
+			"tsx",
+			"js",
+			"jsx",
+			"json",
+			"node"
+		]
 	},
 	"workspaces": {
-		"nohoist": [ "react-native", "react-native/**", "react", "react/**" ]
+		"nohoist": [
+			"react-native",
+			"react-native/**",
+			"react",
+			"react/**",
+			"**/react-native-typescript-transformer"
+		]
 	}
 }
